refactor day 4